@@ -1,3 +1,10 @@
+2009-01-23  Ulrich Drepper  <drepper@redhat.com>
+
+	* readelf.c (parse_opt): Move code to add to dump_data_sections and
+	string_sections list in local function add_dump_section.  Adjust 'x'
+	key handling.  For 'a' key add .strtab, .dynstr, and .comment section
+	to string_sections list.
+
 2009-01-22  Roland McGrath  <roland@redhat.com>
 
 	* readelf.c (print_phdr): Don't print section mapping when no sections.
